@@ -53,6 +53,8 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 
 ## Lua
 
+- ``widgets.FilteredList``: Added ``edit_on_change`` optional paramter to allow a custom callback on filter edit change.
+
 ## Removed
 
 # 50.07-alpha1
